# pico_slp

./: .gitignore  CMakeLists.txt  _main.c  adc.c  adc.h  chan.c  chan.h  fft.c  fft.h  lcd.c  lcd.h  lcd_graph.c  lcd_graph.h  lcd_indicator.c  lcd_indicator.h  lcd_primitives.c  lcd_primitives.h  main.c  out.h  pico_sdk_import.cmake  slp copy.c  slp.c  slp_26.c  slp_32.c  test.py
src/: adc.c  blink.pio  chan.c  chan.h  chan_ex.c  common.h  debug.h  fft.c  fft.h  main.c  out.c
src/control/: control.c  control.h
src/lcd/: lcd copy.pio  lcd.pio  main_lcd.bak
src/net/: net.c  net.h
src/packet_mgr/: packet_mgr.c  packet_mgr.h
src/usb/: tusb_config.h  usb.c  usb.h
src/ws2812/: ws2812.c  ws2812.h  ws2812.pio  ws2812_common.c  ws2812_common.h  ws2812_music.c  ws2812_music.h
